--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,5 +36,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS"></uses-permission>
-    <uses-sdk android:minSdkVersion="3"/>
+    <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:anyDensity="true"/>
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 </manifest> 
