--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,9 +18,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.homelinux.penecoptero.android.citybikes.app"
-      android:versionCode="6"
-      android:versionName="1.2.2 Locator">
+      package="net.homelinux.penecoptero.android.openbicing.app" android:versionName="1.51" android:versionCode="9">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
     	<uses-library android:name="com.google.android.maps" />
 			<activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
