--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.homelinux.penecoptero.android.openbicing.app" android:versionName="1.51" android:versionCode="9">
+      package="net.homelinux.penecoptero.android.openvelib.app" android:versionName="1.3" android:versionCode="6">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
     	<uses-library android:name="com.google.android.maps" />
 			<activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
@@ -28,7 +28,6 @@
 	            </intent-filter>
 	        </activity>
 	        <activity android:name=".SettingsActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-	        <activity android:name=".BikeNetworkActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
