--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,7 @@
  */
  -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.homelinux.penecoptero.android.openbicing.app" android:versionName="1.6.1 Bookmarks" android:versionCode="11">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="net.homelinux.penecoptero.android.openbicing.app" android:versionName="1.6.2 Bookmarks" android:versionCode="12">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
     	<uses-library android:name="com.google.android.maps" />
 			<activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
