--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.homelinux.penecoptero.android.citybikes.app"
+      package="net.homelinux.penecoptero.android.citybikes.donation.app"
       android:versionName="1.4.3 Bookmarks" android:versionCode="10">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
     	<uses-library android:name="com.google.android.maps" />
@@ -29,11 +29,12 @@
 	            </intent-filter>
 	        </activity>
 	        <activity android:name=".SettingsActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-	        <activity android:name=".BikeNetworkActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+	        <activity android:name="net.homelinux.penecoptero.android.citybikes.donation.app.BikeNetworkActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:anyDensity="true"/>
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 </manifest> 
